# ysr

./: Cargo.toml  LICENSE  README.md
.docs/: architecture.md  blocks.md  content.md  id.md  id_sets.md  nodes.md  state_vector.md  transaction.md
.docs/general/: crdt.md  yata.md
.docs/stores/: 00_meta_store.md  01_intern_strings_store.md  02_block_store.md  03_content_data.md  04_map_entries.md  05_state_vector_store.md  block_store.md  content_data.md  delete_set.md  intern_strings_store.md  map_entries.md  meta_store.md  state_vector_store.md
.github/workflows/: main.yml
benches/: transaction.rs
examples/: bench.rs  sizes.rs
src/: block.rs  block_cursor.rs  block_reader.rs  bucket.rs  content.rs  de.rs  gc.rs  id_set.rs  input.rs  integrate.rs  lib.rs  lmdb.rs  multi_doc.rs  node.rs  output.rs  prelim.rs  read.rs  state_vector.rs  test_util.rs  transaction.rs  update.rs  varint.rs  write.rs
src/lib0/: copy.rs  de.rs  macros.rs  mod.rs  ser.rs  test.rs  v1.rs  v2.rs  value.rs  varint.rs
src/store/: block_store.rs  content_store.rs  delete_set.rs  inspect.rs  intern_strings.rs  keys.rs  lmdb.rs  map_entries.rs  meta_store.rs  mod.rs  rocksdb.rs  state_vector.rs
src/store/lmdb/: inspect.rs  keys.rs  mod.rs  store.rs
src/types/: dynamic.rs  list.rs  map.rs  mod.rs  text.rs
tests/: edit_traces.rs
