[package]
name = "ysr"
version = "0.1.0"
edition = "2021"

[features]
default = ["lmdb"]
lmdb = ["dep:lmdb-rs-m"]

[dependencies]
thiserror = "2.0"
bytes = "1.10"
bitflags = { version = "2.9", features = ["serde"] }
zerocopy = { version = "0.8", features = ["derive", "simd"] }
lmdb-rs-m = { version = "0.8", optional = true }
smallvec = { version = "1.15", features = ["const_generics", "const_new", "union", "write"] }
serde = { version = "1.0", features = ["rc", "alloc", "derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
twox-hash = "2.1.0"
simple-base64 = "0.23.2"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.19"